--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -1581,7 +1581,8 @@ table.edit_form hr {
     left: 16px;
 }
 
-.bz_comment_text span.quote, .bz_comment_text span.quote_wrapped {
+.bz_comment_text span.quote, .bz_comment_text span.quote_wrapped,
+div.bz_comment_text pre {
     background: #eee !important;
     color: #444 !important;
     display: block !important;
@@ -1589,6 +1590,31 @@ table.edit_form hr {
     margin-bottom: -10px !important;
     overflow: auto;
     padding: 5px !important;
+}
+
+/* Markdown comments */
+div.bz_comment_text {
+    white-space: normal;
+    line-height: 1.05;
+    padding: 0 8px 0 8px;
+}
+
+div.bz_comment_text code {
+    color: #444;
+    background-color: #eee;
+}
+
+div.bz_comment_text table {
+    border-collapse: collapse;
+}
+
+div.bz_comment_text th, div.bz_comment_text td {
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+}
+
+div.bz_comment_text hr {
+    display: block !important;
 }
 
 .bz_comment_tags {
